--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="">
+  <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Calling</title>
-</head>
-<body>
-    <h1>Flask-Restful api calling</h1>
-    <p id="output">Click button to load message</p>
-
-    <button onclick="callApi()">Call API</button>
-
-    <script>
-        function callApi() {
-            fetch('http://127.0.0.1:5000')
-            .then(response => response.json())
-            .then(data => {
-                // alert('API called successfully!');
-                document.getElementById('output').innerText = data.message;
-            })
-            .catch(error => {
-                alert('Error calling API. Check console for details.');
-                console.error('Error:', error)
-            });
-        }
-    </script>
-
-</body>
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
